<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6F6"
    android:padding="39dp"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLoginView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_main_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allura_regular"
                android:gravity="center"
                android:text="@string/main_title_welcom"
                android:textColor="#721C6E"
                android:textSize="48sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/edit_login"
            android:fontFamily="@font/sora_regular"
            android:hint="@string/main_hint_username_login"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="#721C6E"
            android:textColorHint="#99721C6E"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/constraintTitle" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_login"
            android:fontFamily="@font/sora_regular"
            android:hint="@string/main_hint_password_login"
            android:inputType="textPassword"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="#721C6E"
            android:textColorHint="#99721C6E"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/usernameMain" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/selector_btn_login_style"
            android:fontFamily="@font/sora_medium"
            android:text="@string/main_text_btn_login"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/passwordMain" />

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/sora_medium"
            android:text="@string/main_text_create_account"
            android:textColor="#721C6E"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>